--- a/AddIngredientWindow.xaml
+++ b/AddIngredientWindow.xaml
@@ -24,12 +24,31 @@
                    HorizontalAlignment="Center"
                    Foreground="FloralWhite"/>
 
+        <Button Grid.Row="0" 
+                x:Name="BackButton" 
+                Click="BackButton_Click"
+                Width="44" 
+                Height="34"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Margin="5,5,0,0"
+                Background="LightBlue"
+                BorderBrush="LightBlue">
+            <Path Data="M10,0 L0,10 L10,20 L10,14 L16,14 L16,6 L10,6 Z" 
+                  Width="34"
+                  Height="24"
+                  Fill="LightSeaGreen"
+                  Stretch="Fill"/>
+        </Button>
+
         <StackPanel Grid.Row="1" 
                     Orientation="Horizontal"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Center"
-                    Margin="0,0,0,100">
+                    Margin="0,0,0,150">
             <TextBox x:Name="ingredientNameBox"
+                     GotFocus="ingredientNameBox_GotFocus"
+                     LostFocus="ingredientNameBox_LostFocus"
                      Height="30"
                      Width="300"
                      Text="Enter the name of the ingredient"
@@ -37,7 +56,7 @@
                      HorizontalContentAlignment="Center"
                      FontStyle="Italic"
                      FontSize="13"
-                     FontWeight="Bold"
+                     FontWeight="DemiBold"
                      Foreground="LightSlateGray"
                      TextWrapping="Wrap"
                      Background="FloralWhite"
@@ -48,8 +67,9 @@
         <StackPanel Grid.Row="2"                      
                     HorizontalAlignment="Center"
                     VerticalAlignment="Bottom"
-                    Margin="0,0,0,50">
+                    Margin="0,0,0,120">
             <Button x:Name= "SaveIngredientButton"
+                    Click="SaveIngredientButton_Click"
                     FontSize="15"
                     FontWeight="Bold">
                 <Button.Template>
