--- a/IngredientsWindow.xaml
+++ b/IngredientsWindow.xaml
@@ -49,6 +49,9 @@
                     VerticalAlignment="Top"
                     Margin="0,10,0,0">
             <TextBox x:Name="searchBox"
+                     KeyUp="searchBox_KeyUp"
+                     GotFocus="searchBox_GotFocus"
+                     LostFocus="searchBox_LostFocus"
                      HorizontalAlignment="Center"
                      VerticalAlignment="Top"
                      Height="30"
@@ -58,15 +61,15 @@
                      VerticalContentAlignment="Center"
                      HorizontalContentAlignment="Center"
                      FontStyle="Italic"
-                     FontSize="12"
-                     FontWeight="Bold"
+                     FontSize="13"
+                     FontWeight="DemiBold"
                      Foreground="LightSlateGray"
                      TextWrapping="Wrap"
                      Background="FloralWhite"
                      BorderBrush="LightSeaGreen"
-                     BorderThickness="2"
-                     KeyUp="searchBox_KeyUp"/>
+                     BorderThickness="2"/>
             <ListBox x:Name="resultListBox"
+                     Visibility="Collapsed"
                      Height="150"
                      Width="200"
                      HorizontalAlignment="Center"
@@ -82,6 +85,7 @@
                     VerticalAlignment="Bottom"
                     Margin="0,0,0,70">
             <Button x:Name= "AddIngredientButton"
+                    Click="AddIngredientButton_Click"
                     VerticalAlignment="Bottom"   
                     HorizontalAlignment="Left"
                     Margin="0,0,250,0"
@@ -108,6 +112,7 @@
                 </Button.Foreground>
             </Button>
             <Button x:Name= "DeleteIngredientButton"
+                    Click="DeleteIngredientButton_Click"
                     VerticalAlignment="Bottom"
                     HorizontalAlignment="Right"  
                     FontSize="11"
