--- a/RecipesWindow.xaml
+++ b/RecipesWindow.xaml
@@ -58,15 +58,15 @@
                      VerticalContentAlignment="Center"
                      HorizontalContentAlignment="Center"
                      FontStyle="Italic"
-                     FontSize="12"
-                     FontWeight="Bold"
+                     FontSize="13"
+                     FontWeight="DemiBold"
                      Foreground="LightSlateGray"
                      TextWrapping="Wrap"
                      Background="FloralWhite"
                      BorderBrush="LightSeaGreen"
-                     BorderThickness="2"
-                     KeyUp="searchBox_KeyUp"/>
+                     BorderThickness="2"/>
             <ListBox x:Name="resultListBox"
+                     Visibility="Collapsed"
                      Height="150"
                      Width="200"
                      HorizontalAlignment="Center"
@@ -79,16 +79,19 @@
         <StackPanel Grid.Row="1"                      
                     HorizontalAlignment="Right"
                     VerticalAlignment="Top"
-                    Margin="0,10,20,0">
+                    Margin="0,10,30,0">
             <ComboBox x:Name="categoryBox"
                       VerticalAlignment="Top"
                       HorizontalAlignment="Left" 
                       Height="30"
                       Width="150"
-                      Text="Choose Category"
+                      IsEditable="True"
+                      Text ="Filter by Category"
+                      VerticalContentAlignment="Center"
+                      HorizontalContentAlignment="Center"
                       FontStyle="Italic"
-                      FontSize="12"
-                      FontWeight="Bold"
+                      FontSize="13"
+                      FontWeight="DemiBold"
                       Foreground="LightSlateGray"  
                       Background="FloralWhite"
                       BorderBrush="LightSeaGreen"
@@ -128,9 +131,9 @@
 
         <StackPanel Grid.Row="2"
                     Orientation="Horizontal"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Bottom"
-                    Margin="0,0,0,70">
+                    HorizontalAlignment="Left"
+                    VerticalAlignment="Top"
+                    Margin="115,10,0,0">
             <Button x:Name= "EditRecipeButton"
                     VerticalAlignment="Bottom"   
                     HorizontalAlignment="Left"
