--- a/MainMenu.xaml
+++ b/MainMenu.xaml
@@ -7,14 +7,14 @@
         mc:Ignorable="d"
         Title="Cookbook" Height="400" Width="600"       
         WindowStartupLocation="CenterScreen"
-        Background="LightBlue">
+        Background="LightBlue"
+        ResizeMode="NoResize">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="80"/>
-            <RowDefinition Height="100"/>
-            <RowDefinition Height="220"/>
+            <RowDefinition Height="320"/>
         </Grid.RowDefinitions>
-        
+
         <TextBlock Grid.Row="0"
                    x:Name="cookbookTextBlock"
                    VerticalAlignment="Center"
@@ -26,66 +26,32 @@
                    Foreground="FloralWhite"/>
 
         <StackPanel Grid.Row="1"
-                    Orientation="Horizontal"
+                    Orientation="Vertical"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Top"
                     Margin="0,50,0,0">
-            <Button x:Name= "SurpriseMeButton"
-                    Margin="0,0,50,0"
-                    Click="SurpriseMeButton_Click"
-                    FontWeight="Bold">
+            <Button x:Name= "RecipesButton"
+                    Click="RecipesButton_Click"
+                    Margin="0,0,0,20"
+                    FontWeight="Bold" 
+                    Foreground="LightSeaGreen">
                 <Button.Template>
                     <ControlTemplate>
-                        <Border x:Name="surpriseMeBorder"
+                        <Border x:Name="recipesBorder"
                                 Height="40"
                                 Width="130"
                                 CornerRadius="15"
                                 Background="FloralWhite"
                                 BorderBrush="LightSeaGreen"
                                 BorderThickness="2">
-                            <ContentPresenter Content="SURPRISE ME!"
+                            <ContentPresenter Content="RECIPES"
                                               HorizontalAlignment="Center"
                                               VerticalAlignment="Center"/>
                         </Border>
                     </ControlTemplate>
                 </Button.Template>
-                <Button.Foreground>
-                    <SolidColorBrush Color="LightSeaGreen">
-                    </SolidColorBrush>
-                </Button.Foreground>
             </Button>
-            <Button x:Name= "MyFridgeButton"
-                    Click="MyFridgeButton_Click"
-                    FontWeight="Bold">
-                <Button.Template>
-                    <ControlTemplate>
-                        <Border x:Name="MyFridgeBorder"
-                                Height="40"
-                                Width="130"
-                                CornerRadius="15"
-                                Background="FloralWhite"
-                                BorderBrush="LightSeaGreen"
-                                BorderThickness="2">
-                            <ContentPresenter Content="MY FRIDGE"
-                                              HorizontalAlignment="Center"
-                                              VerticalAlignment="Center"/>
-                        </Border>
-                    </ControlTemplate>
-                </Button.Template>
-                <Button.Foreground>
-                    <SolidColorBrush Color="LightSeaGreen">
-                    </SolidColorBrush>
-                </Button.Foreground>
-            </Button>
-        </StackPanel>
-        
-        <StackPanel Grid.Row="2"
-                    Orientation="Horizontal"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Top"
-                    Margin="0,10,0,0">
             <Button x:Name= "IngredientsButton"
-                    Margin="0,0,50,0"
                     Click="IngredientsButton_Click"
                     FontWeight="Bold" 
                     Foreground="LightSeaGreen">
@@ -99,26 +65,6 @@
                                 BorderBrush="LightSeaGreen"
                                 BorderThickness="2">
                             <ContentPresenter Content="INGREDIENTS"
-                                              HorizontalAlignment="Center"
-                                              VerticalAlignment="Center"/>
-                        </Border>
-                    </ControlTemplate>
-                </Button.Template>
-            </Button>
-            <Button x:Name= "RecipesButton"
-                    Click="RecipesButton_Click"
-                    FontWeight="Bold" 
-                    Foreground="LightSeaGreen">
-                <Button.Template>
-                    <ControlTemplate>
-                        <Border x:Name="recipesBorder"
-                                Height="40"
-                                Width="130"
-                                CornerRadius="15"
-                                Background="FloralWhite"
-                                BorderBrush="LightSeaGreen"
-                                BorderThickness="2">
-                            <ContentPresenter Content="RECIPES"
                                               HorizontalAlignment="Center"
                                               VerticalAlignment="Center"/>
                         </Border>
