--- a/RecipesWindow.xaml
+++ b/RecipesWindow.xaml
@@ -5,13 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Cookbook"
         mc:Ignorable="d"
-        Title="Cookbook" Height="400" Width="700"
+        Title="Cookbook" Height="420" Width="700"
         WindowStartupLocation="CenterScreen"
-        Background="LightBlue">
+        Background="LightBlue"
+        ResizeMode="NoResize">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="80"/>
-            <RowDefinition Height="200"/>
+            <RowDefinition Height="220"/>
             <RowDefinition Height="120"/>
         </Grid.RowDefinitions>
 
@@ -47,8 +48,11 @@
                     Orientation="Vertical"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Top"
-                    Margin="0,10,0,0">
+                    Margin="0,30,0,0">
             <TextBox x:Name="searchBox"
+                     KeyUp="searchBox_KeyUp"
+                     GotFocus="searchBox_GotFocus"
+                     LostFocus="searchBox_LostFocus"
                      HorizontalAlignment="Center"
                      VerticalAlignment="Top"
                      Height="30"
@@ -66,6 +70,7 @@
                      BorderBrush="LightSeaGreen"
                      BorderThickness="2"/>
             <ListBox x:Name="resultListBox"
+                     MouseDoubleClick="resultListBox_MouseDoubleClick"
                      Visibility="Collapsed"
                      Height="150"
                      Width="200"
@@ -79,30 +84,63 @@
         <StackPanel Grid.Row="1"                      
                     HorizontalAlignment="Right"
                     VerticalAlignment="Top"
-                    Margin="0,10,30,0">
+                    Margin="0,20,30,0">
+            <Label x:Name="categoryLabel"
+                   VerticalAlignment="Center"
+                   HorizontalAlignment="Center"
+                   Content="Filter by Category"
+                   FontStyle="Italic"
+                   FontWeight="Bold"
+                   FontSize="17"
+                   Foreground="FloralWhite"/>
             <ComboBox x:Name="categoryBox"
                       VerticalAlignment="Top"
                       HorizontalAlignment="Left" 
                       Height="30"
                       Width="150"
-                      IsEditable="True"
                       Text ="Filter by Category"
                       VerticalContentAlignment="Center"
                       HorizontalContentAlignment="Center"
                       FontStyle="Italic"
-                      FontSize="13"
+                      FontSize="14"
                       FontWeight="DemiBold"
-                      Foreground="LightSlateGray"  
-                      Background="FloralWhite"
-                      BorderBrush="LightSeaGreen"
+                      Foreground="LightSeaGreen"  
                       BorderThickness="2"/>
         </StackPanel>
 
         <StackPanel Grid.Row="1" 
                     HorizontalAlignment="Left"
                     VerticalAlignment="Bottom"
-                    Margin="115,0,0,20">
+                    Margin="115,0,0,10">
+            <Button x:Name= "OpenRecipeButton"
+                    Click="OpenRecipeButton_Click"
+                    VerticalAlignment="Bottom"   
+                    HorizontalAlignment="Left"
+                    Margin="0,0,0,20"
+                    FontSize="11"
+                    FontWeight="Bold">
+                <Button.Template>
+                    <ControlTemplate>
+                        <Border x:Name="openRecipeBorder"
+                                Height="40"
+                                Width="110"
+                                CornerRadius="15"
+                                Background="FloralWhite"
+                                BorderBrush="LightSeaGreen"
+                                BorderThickness="2">
+                            <ContentPresenter Content="OPEN RECIPE"
+                                              HorizontalAlignment="Center"
+                                              VerticalAlignment="Center"/>
+                        </Border>
+                    </ControlTemplate>
+                </Button.Template>
+                <Button.Foreground>
+                    <SolidColorBrush Color="LightSeaGreen">
+                    </SolidColorBrush>
+                </Button.Foreground>
+            </Button>
             <Button x:Name= "CreateRecipeButton"
+                    Click="CreateRecipeButton_Click"
                     VerticalAlignment="Bottom"   
                     HorizontalAlignment="Left"
                     FontSize="11"
@@ -135,6 +173,7 @@
                     VerticalAlignment="Top"
                     Margin="115,10,0,0">
             <Button x:Name= "EditRecipeButton"
+                    Click="EditRecipeButton_Click"
                     VerticalAlignment="Bottom"   
                     HorizontalAlignment="Left"
                     Margin="0,0,250,0"
@@ -161,6 +200,7 @@
                 </Button.Foreground>
             </Button>
             <Button x:Name= "DeleteRecipeButton"
+                    Click="DeleteRecipeButton_Click"
                     VerticalAlignment="Bottom"
                     HorizontalAlignment="Right"  
                     FontSize="11"
